--- a/项目日志.md
+++ b/项目日志.md
@@ -55,3 +55,14 @@
 ## 3.23
 
 - 设计食物编辑页面（FoodEditDialog）的布局
+
+## 3.24
+
+- 调整了食物编辑页面布局
+- 完成添加食物功能
+- 完成删除食物功能
+- 调整了主窗口尺寸
+- 完成每日营养总量自动统计
+
+> 食物编辑页面的设计思路不太好，导致很多冗余的计算和搜索，不过在小规模数据下尚可接受。
+> 另外，代码风格也太过拖沓，采用列举的方式设置每一个元素和属性，过于冗长。
