--- a/项目日志.md
+++ b/项目日志.md
@@ -70,3 +70,14 @@
 ## 3.25
 
 - 完成编辑食物功能
+
+## 3.26
+
+- 修正了食物详情显示错误
+
+## 3.28
+
+- 在主页面中添加了日期选框
+- 实现了日期修改的功能
+- 修改了“今日概览”一栏的显示文字
+- 初步实现“营养报告”一栏的历史报告显示
